k3s/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: gic-chathub
  annotations:
    traefik.ingress.kubernetes.io/routing-type: edge
spec:
  rules:
  - host: tailchat.internal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tailchat
            port:
              number: 11000
